Replaced showdown.js with marked.js and added styles for the markdown div

--- a/.theme/header.html
+++ b/.theme/header.html
@@ -26,5 +26,5 @@
 		}
 	}
 </script>
-<div id="raw_include_HEADER_md"></div>
+<div id="raw_include_HEADER_md" class="markdown"></div>
 <h1 class="breadcrumbs">
