--- a/.theme/footer.html
+++ b/.theme/footer.html
@@ -1,34 +1,25 @@
-    <div id="raw_include_README_md"></div>
+    <div id="raw_include_README_md" class="markdown"></div>
 
     <footer>
-        Theme available on <a href="https://github.com/jacktseng831/Nginx-Fancyindex-Theme">Github</a>, released under <a href="https://lbesson.mit-license.org/">the MIT License</a>.
+        Theme available on <a href="https://github.com/jacktseng831/Nginx-Fancyindex-Theme">Github</a>, released under the MIT License.
     </footer>
     <script src="https://unpkg.com/xregexp/xregexp-all.js"></script>
     <script type="text/javascript" src="/.theme/addNginxFancyIndexForm.js"></script>
-    <script type="text/javascript" src="/.theme/showdown.min.js"></script>
+    <script type="text/javascript" src="/.theme/marked.min.js"></script>
     <script type="text/javascript" defer>
-        var converter = new showdown.Converter({tables: true});
         $( "#raw_include_HEADER_md" ).load( "HEADER.md", function (){
             var elem = document.querySelector("#raw_include_HEADER_md");
             // strip leading whitespace so it isn't evaluated as code
-            var text = elem.innerHTML;
-            // console.log("text =", text);
-            text = text.replace(/\n[ ]*/g, '\n');
-            // console.log("text =", text);
-            var html = converter.makeHtml(text);
-            // console.log("html =", html);
+            var text = elem.innerHTML.replace(/\n[ ]*/g, '\n');
+            var html = marked(text);
             // here, have some HTML
             elem.innerHTML = html;
         });
         $( "#raw_include_README_md" ).load( "README.md", function (){
             var elem = document.querySelector("#raw_include_README_md");
             // strip leading whitespace so it isn't evaluated as code
-            var text = elem.innerHTML;
-            // console.log("text =", text);
-            text = text.replace(/\n[ ]*/g, '\n');
-            // console.log("text =", text);
-            var html = converter.makeHtml(text);
-            // console.log("html =", html);
+            var text = elem.innerHTML.replace(/\n[ ]*/g, '\n');
+            var html = marked(text);
             // here, have some HTML
             elem.innerHTML = html;
         });
